@@ -1,5 +1,14 @@
 2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>
 
+	* configure.ac:
+	* src/ephy-main.c:
+	R src/ephy-automation.h:
+
+	Remove various references to bonobo, ephy is now officially
+	monkey free!
+
+2006-01-03  Crispin Flowerday  <gnome@flowerday.cx>
+
 	* src/Makefile.am:
 
 	Fix some white space issues to keep make and emacs happy
